--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,9 @@
 <h1>Welcome</h1>
-<p>Please, sigh in thought steam: </p>
-<%= link_to image_tag("http://cdn.steamcommunity.com/public/images/signinthroughsteam/sits_large_noborder.png"), '/auth/steam' %>
+<% if session.key? :current_user %>
+	<%= image_tag session[:current_user][:image] %>
+	<p><%= session[:current_user][:nickname] %></p>
+	<p><%= session[:current_user][:uid] %></p>
+<%else%>
+	<p>Please, sigh in thought steam: </p>
+	<%= link_to image_tag("http://cdn.steamcommunity.com/public/images/signinthroughsteam/sits_large_noborder.png"), '/auth/steam' %>
+<% end %>
