--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Steam</title>
+  <title>Steam Viewer</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<div class="container">
+      <%= render 'signin/sighin_page' %>
+</div>
+<div class="container">
+	<div class="center hero-unit">
+	  <h1>Welcome to the Steam Viewer</h1>
+	</div>
+</div>
+<div class="container">
+      <%= yield %>
+</div>
 </body>
 </html>
