--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
 	</div>
 <% end %>
 <div class="newslist">
-	<h1>News for Team Fotress 2</h1>
+	<h1>News for <%= @app_name%></h1>
 	<ul class="list-group">
 		<% @news.each do |n| %>
 			<li class="list-group-item">
